@@ -1,3 +1,8 @@
+2001-08-22  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* testsuite/22_locale/collate_wchar_t_members.cc: Guard
+	with _GLIBCPP_USE_WCHAR_T.
+
 2001-08-21  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* testsuite/22_locale/collate_byname.cc (test01): Fix.
